--- a/albums.html
+++ b/albums.html
@@ -12,12 +12,7 @@
     <h1>Albums API Client</h1>
 
     <!-- Button trigger modal -->
-    <button
-      type="button"
-      class="btn btn-primary btn-lg"
-      data-toggle="modal"
-      data-target="#addModal"
-    >
+    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal">
       Add Album
     </button>
     <button
