--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   </head>
   <body>
     <div class="mydiv" style="margin-top: 100px">
+      <h1>Click on any of these to see respective API's</h1>
       <button
         id="users"
         class="btn btn-primary btn-lg"
